commons/ingress/ingress-keycloak-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-http
  namespace: cert-manager
spec:
  entryPoints:
    - websecure
    # - web
  routes:
  - match:  HOST(`kk.dev.raseedy.io`) 
    kind: Rule
    services:
    - name: keycloak
      port: 8080
      namespace: dev
  tls:                          
    secretName: raseedy-tls-stg 
    domains:
    - main: "*.raseedy.io"
      sans: 
      - kk.dev.raseedy.io

  # tls:
  #     secretName: raseedy-tls
  #     domains:
  #     - main: "*.raseedy.io"
  # tls: 
  #     certResolver: myresolver
  #     domains:
  #     - main: "*.raseedy.site"
