commons/ingress/ingress-keycloak.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-http
  namespace: traefik
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match:  HOST(`keycloak.dev.raseedy.io`) 
    kind: Rule
    services:
    - name: keycloak
      port: 8080
      namespace: dev
  tls:                              # [9]
    secretName: raseedy-tls         # [10]
    domains:
    - main: "*.raseedy.io"
  # tls:
  #     secretName: raseedy-tls
  #     domains:
  #     - main: "*.raseedy.io"
  # tls: 
  #     certResolver: myresolver
  #     domains:
  #     - main: "*.raseedy.site"
