commons/ingress/ingress-traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: HOST(`traefik.dev.raseedy.io`) && ( PathPrefix(`/dashboard`) || PathPrefix(`/api`) )
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    # middlewares:  
    # - name: kk-auth
  tls:
    secretName: raseedy-tls
    domains:
    - main: "*.raseedy.io"
    # certResolver: myresolver
    # domains:
    #   - main: "*.raseedy.site"
